sonarr/sonarr-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sonarr
  namespace: default
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: linuxserver/sonarr
        imagePullPolicy: Always
        resources:
          requests:
            memory: "1Gi"
            cpu: "1"
        ports:
          - containerPort: 8989
        volumeMounts:
          - mountPath: /config
            name: config
          - mountPath: /downloads
            name: downloads
          - mountPath: /tv
            name: tv
      volumes:
      -  name: config
         persistentVolumeClaim:
          claimName: sonarr
      - name: downloads
        hostPath:
          path: /mnt/share/Downloads
      - name: tv
        hostPath:
          path: /mnt/share/Television
